.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:39:11 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
make: No se hace nada para 'all'.
20:39:15 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
make: No se hace nada para 'all'.
20:40:50 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Parcial_1_Lab_I_2017.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Parcial_1_Lab_I_2017.d" -MT"src/Parcial_1_Lab_I_2017.o" -o "src/Parcial_1_Lab_I_2017.o" "../src/Parcial_1_Lab_I_2017.c"
../src/Parcial_1_Lab_I_2017.c: In function ‘main’:
../src/Parcial_1_Lab_I_2017.c:36:19: warning: passing argument 1 of ‘cargaFlagDisplay’ from incompatible pointer type [-Wincompatible-pointer-types]
   36 |  cargaFlagDisplay(contrataciones, DISPLAY_NUM);
      |                   ^~~~~~~~~~~~~~
      |                   |
      |                   Contatraciones * {aka struct <anonymous> *}
In file included from ../src/Parcial_1_Lab_I_2017.c:19:
../src/Pantalla.h:36:31: note: expected ‘Display *’ {aka ‘struct <anonymous> *’} but argument is of type ‘Contatraciones *’ {aka ‘struct <anonymous> *’}
   36 | int cargaFlagDisplay(Display *pDiplay, int len);
      |                      ~~~~~~~~~^~~~~~~
../src/Parcial_1_Lab_I_2017.c:84:5: warning: implicit declaration of function ‘imprimirMenuInformes’; did you mean ‘imprimirMenuInicial’? [-Wimplicit-function-declaration]
   84 |     imprimirMenuInformes();
      |     ^~~~~~~~~~~~~~~~~~~~
      |     imprimirMenuInicial
../src/Parcial_1_Lab_I_2017.c:33:6: warning: variable ‘retornoModif’ set but not used [-Wunused-but-set-variable]
   33 |  int retornoModif;
      |      ^~~~~~~~~~~~
Finished building: ../src/Parcial_1_Lab_I_2017.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
09:36:44 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Contrataciones.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Contrataciones.d" -MT"src/Contrataciones.o" -o "src/Contrataciones.o" "../src/Contrataciones.c"
../src/Contrataciones.c:29:5: error: conflicting types for ‘altaContrataciones’
   29 | int altaContrataciones(Contrataciones pContrato[],int len)
      |     ^~~~~~~~~~~~~~~~~~
In file included from ../src/Contrataciones.c:17:
../src/Contrataciones.h:20:5: note: previous declaration of ‘altaContrataciones’ was here
   20 | int altaContrataciones(Display pContrato[],int len);
      |     ^~~~~~~~~~~~~~~~~~
../src/Contrataciones.c: In function ‘altaContrataciones’:
../src/Contrataciones.c:35:33: warning: passing argument 1 of ‘buscarLugarLibreDisplay’ from incompatible pointer type [-Wincompatible-pointer-types]
   35 |   libre=buscarLugarLibreDisplay(pContrato, DISPLAY_NUM);
      |                                 ^~~~~~~~~
      |                                 |
      |                                 Contrataciones * {aka struct <anonymous> *}
In file included from ../src/Contrataciones.c:15:
../src/Pantalla.h:28:38: note: expected ‘Display *’ {aka ‘struct <anonymous> *’} but argument is of type ‘Contrataciones *’ {aka ‘struct <anonymous> *’}
   28 | int buscarLugarLibreDisplay(Display *pDisplay, int len);
      |                             ~~~~~~~~~^~~~~~~~
../src/Contrataciones.c:36:30: warning: passing argument 1 of ‘buscarLugarLibreDisplay’ from incompatible pointer type [-Wincompatible-pointer-types]
   36 |   if(buscarLugarLibreDisplay(pContrato, DISPLAY_NUM)>=0)
      |                              ^~~~~~~~~
      |                              |
      |                              Contrataciones * {aka struct <anonymous> *}
In file included from ../src/Contrataciones.c:15:
../src/Pantalla.h:28:38: note: expected ‘Display *’ {aka ‘struct <anonymous> *’} but argument is of type ‘Contrataciones *’ {aka ‘struct <anonymous> *’}
   28 | int buscarLugarLibreDisplay(Display *pDisplay, int len);
      |                             ~~~~~~~~~^~~~~~~~
../src/Contrataciones.c:39:8: warning: implicit declaration of function ‘disp_loadContrato’ [-Wimplicit-function-declaration]
   39 |     if(disp_loadContrato(&pContrato[libre], DISPLAY_NUM)==0)
      |        ^~~~~~~~~~~~~~~~~
../src/Contrataciones.c: At top level:
../src/Contrataciones.c:60:23: error: unknown type name ‘Contataciones’; did you mean ‘Contrataciones’?
   60 | int disp_loadContrato(Contataciones *pContrato, int len)
      |                       ^~~~~~~~~~~~~
      |                       Contrataciones
make: *** [src/subdir.mk:29: src/Contrataciones.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
